--- a/src/main/webapp/car_task_add.html
+++ b/src/main/webapp/car_task_add.html
@@ -19,7 +19,7 @@
     <script type="text/javascript" src="js/car_task_add.js" ></script>
     <script type="text/javascript" src="js/unlogin.js" ></script>
     <script type="text/javascript" src="js/str.js" ></script>
-    <script type="text/javascript" src="js/dilog.js" ></script>
+    <script type="text/javascript" src="js/dialog.js" ></script>
     <!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
     <!--[if lt IE 9]>
       <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
