--- a/src/main/webapp/road_line_info.html
+++ b/src/main/webapp/road_line_info.html
@@ -17,7 +17,7 @@
 		<script type="text/javascript" src="js/conf.js"></script>
 		<script type="text/javascript" src="js/log.js"></script>
 		<script type="text/javascript" src="js/road_line_info.js"></script>
-		<script type="text/javascript" src="js/dilog.js" ></script>
+		<script type="text/javascript" src="js/dialog.js" ></script>
 		<script type="text/javascript" src="js/str.js"></script>
 		<script type="text/javascript" src="js/toast.js"></script>
 		<script type="text/javascript" src="js/unlogin.js"></script>
