--- a/src/main/webapp/user_add.html
+++ b/src/main/webapp/user_add.html
@@ -17,7 +17,7 @@
 		<script type="text/javascript" src="js/conf.js"></script>
 		<script type="text/javascript" src="js/log.js"></script>
 		<script type="text/javascript" src="js/user_add.js"></script>
-		<script type="text/javascript" src="js/dilog.js" ></script>
+		<script type="text/javascript" src="js/dialog.js" ></script>
 		<script type="text/javascript" src="js/str.js"></script>
 		<script type="text/javascript" src="js/toast.js"></script>
 		<script type="text/javascript" src="js/unlogin.js"></script>
@@ -30,13 +30,14 @@
 
 	<body>
 		<div class="x-body">
-			<form class="layui-form layui-form-pane">
+			<form class="layui-form layui-form-pane" id="form_data">
 				<div class="layui-form-item">
 					<label for="input_user_name" class="layui-form-label">
                   		<span class="x-red">*</span>登录账号
               		</label>
 					<div class="layui-input-block">
-						<input type="text" id="input_user_name" placeholder="请输入登录账号" name="username" autocomplete="off" class="layui-input">
+						<input type="text" id="input_user_name" placeholder="请输入登录账号" name="username" 
+							autocomplete="off" class="layui-input" lay-verify="required" lay-verType="tips">
 					</div>
 
 				</div>
@@ -100,7 +101,7 @@
 				<div class="layui-form-item">
 					<label for="btn_add" class="layui-form-label">
               		</label>
-					<button id="btn_add" type="button" class="layui-btn" lay-filter="add" lay-submit="">
+					<button id="btn_add" type="submit" class="layui-btn" lay-filter="add" lay-submit="">
                   		增加
               		</button>
 				</div>
