--- a/src/main/webapp/user_list.html
+++ b/src/main/webapp/user_list.html
@@ -22,7 +22,7 @@
 		<script type="text/javascript" src="js/unlogin.js"></script>
 		<script type="text/javascript" src="lib/layui/lay/modules/laypage.js"></script>
 		<script type="text/javascript" src="lib/layui/lay/modules/form.js"></script>
-		<script type="text/javascript" src="js/dilog.js" ></script>
+		<script type="text/javascript" src="js/dialog.js" ></script>
 		<!-- 让IE8/9支持媒体查询，从而兼容栅格 -->
 		<!--[if lt IE 9]>
       <script src="https://cdn.staticfile.org/html5shiv/r29/html5.min.js"></script>
