--- a/template_list.html
+++ b/template_list.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>地点列表</title>
+		<title>_title_</title>
 		<meta name="renderer" content="webkit">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
@@ -16,7 +16,7 @@
 		<script type="text/javascript" src="js/ajax.js"></script>
 		<script type="text/javascript" src="js/conf.js"></script>
 		<script type="text/javascript" src="js/log.js"></script>
-		<script type="text/javascript" src="js/station_list.js"></script>
+		<script type="text/javascript" src="js/user_list.js"></script>
 		<script type="text/javascript" src="js/str.js"></script>
 		<script type="text/javascript" src="js/toast.js"></script>
 		<script type="text/javascript" src="js/unlogin.js"></script>
@@ -31,10 +31,22 @@
 	</head>
 
 	<body>
-		
+		<div class="x-nav">
+			<span class="layui-breadcrumb">
+        <a>
+          <cite>_title_</cite></a>
+      </span>
+			<a class="layui-btn layui-btn-small" style="line-height:1.6em;margin-top:3px;float:right" href="javascript:location.replace(location.href);" title="刷新">
+				<i class="layui-icon" style="line-height:30px">ဂ</i></a>
+		</div>
 		<div class="x-body">
-			
-			<table class="layui-table" id="t_datas">
+			<div class="layui-row">
+				<form class="layui-form layui-col-md12 x-so">
+
+					<button type="button" class="layui-btn" onclick="x_admin_show('添加','./user_add.html')"><i class="layui-icon"></i>添加</button>
+				</form>
+			</div>
+			<table class="layui-table" id="t_data">
 
 			</table>
 			<div id="paged" class="page">
